--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@google/model-viewer": "^4.0.0",
     "@popperjs/core": "^2.11.8",
+    "@types/three": "^0.175.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
